# delivery-rs

./: LICENSE  README.md  docker-compose.yml
apache-kafka/: docker-compose.yml
api/: .env.example  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
api/migrations/: 20230314171355_routes_table.sql  20230314182942_positions_table.sql
api/src/: kafka.rs  main.rs  models.rs  repository.rs  routes.rs  websocket.rs
simulator/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
simulator/destinations/: 1.txt  2.txt
simulator/src/: consumer.rs  main.rs  models.rs  producer.rs
src/: main.rs
web/: Cargo.toml  index.html  index.scss
web/src/: main.rs  models.rs
web/src/components/: select.rs
