[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "tls", "json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
dotenv = "0.15.0"
ws = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
