[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
log = "0.4"
yew-hooks = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlSelectElement"
]
